# vqa

./: README.md  app-with-gui.py  app.py  pyproject.toml
answers/: boxing.txt  dogs.txt  elephant.txt  food.txt
